--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>The Fresh Prince of Bel-Air</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='http://fonts.googleapis.com/css?family=Nixie+One|Fredoka+One|Raleway|Chelsea+Market' rel='stylesheet' type='text/css'>
 </head>
     <body>
   <header>  
